...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="syU-v6-7tN" customClass="SignUpButtonView" customModule="Radiofy" customModuleProvider="target">
                                <rect key="frame" x="40" y="536" width="334" height="48"/>
                                <color key="backgroundColor" red="0.1137254902" green="0.72549019609999998" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                </state>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6bG-yx-TpL" customClass="LogInButtonView" customModule="Radiofy" customModuleProvider="target">
                                <rect key="frame" x="40" y="604" width="334" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="LogInButtonView"/>
...
                                <color key="backgroundColor" red="0.4392189085" green="0.44320440290000002" blue="0.43921548129999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="tintColor" red="0.1137254902" green="0.72549019609999998" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="nameTextSign" label="nameTextSign"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="kf1-Vn-vay"/>
...
                                <color key="backgroundColor" red="0.2549039125" green="0.25489839910000001" blue="0.25490215420000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="tintColor" red="0.1137254902" green="0.72549019609999998" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailTextSign" label="emailTextSign"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="15A-Yh-6FZ"/>
...
                                <color key="backgroundColor" red="0.2549039125" green="0.25489839910000001" blue="0.25490215420000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="tintColor" red="0.1137254902" green="0.72549019609999998" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordTextSign" label="passwordTextSign"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="tXb-0h-V6k"/>
...
                                <rect key="frame" x="107" y="428" width="200" height="50"/>
                                <color key="backgroundColor" red="0.30193492770000002" green="0.30203139779999999" blue="0.29803889989999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="signUpStartButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" identifier="signUpButtonWidth" id="jtZ-0M-gd3"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gd5-aV-wYo">
                                <rect key="frame" x="15" y="488" width="384" height="17"/>
                                <accessibility key="accessibilityConfiguration" identifier="errorSignUpLabel"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                <color key="textColor" systemColor="systemRedColor"/>
...
                                <color key="backgroundColor" red="0.4392189085" green="0.44320440290000002" blue="0.43921548129999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="tintColor" red="0.1137254902" green="0.72549019609999998" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailLogInFields"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="1aI-de-NXa"/>
...
                                <color key="backgroundColor" red="0.2549039125" green="0.25489839910000001" blue="0.25490215420000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="tintColor" red="0.1137254902" green="0.72549019609999998" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordLogInFields"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="LRG-PQ-3KQ"/>
...
                                <rect key="frame" x="107" y="314" width="200" height="50"/>
                                <color key="backgroundColor" red="0.30193492770000002" green="0.30203139779999999" blue="0.29803889989999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="LogInStartButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" identifier="logInButtonWidth" id="TF4-r6-78r"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hMZ-b6-BQ5" customClass="ForgettenPasswordButtonView" customModule="Radiofy" customModuleProvider="target">
                                <rect key="frame" x="107" y="389" width="200" height="27"/>
                                <accessibility key="accessibilityConfiguration" identifier="forgetMyPasswordButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="guy-M7-OrJ"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wtg-W6-PYG">
                                <rect key="frame" x="15" y="426" width="384" height="17"/>
                                <accessibility key="accessibilityConfiguration" identifier="logInErrorLabel"/>
