...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dZu-dE-DQY">
                                <rect key="frame" x="1" y="1" width="50" height="50"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="z2Q-ye-7kM">
                                <rect key="frame" x="61" y="5" width="179" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="BarTitleLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="4NB-2C-L8l"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nRs-mm-5pv">
                                <rect key="frame" x="260" y="6" width="40" height="40"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="MiniPlayButtonFromBar"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="6KF-b9-rhP"/>
                                    <constraint firstAttribute="height" constant="40" id="upX-V4-Q3o"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" image="playButton"/>
...
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2c-jn-qbL">
                                        <rect key="frame" x="25" y="50" width="30" height="24"/>
                                        <accessibility key="accessibilityConfiguration" identifier="closeRadioPlayerButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="kSu-ef-Odc"/>
                                        </constraints>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" image="chevron-down"/>
                                        <connections>
...
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ESk-w7-XVN">
                                        <rect key="frame" x="155" y="544" width="65" height="65"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="radioPlayerPlayButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="ESk-w7-XVN" secondAttribute="height" multiplier="1:1" id="KhB-Az-Mnw"/>
                                            <constraint firstAttribute="width" constant="65" id="Ot7-vx-FVD"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
